# reflexa

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  nginx.conf  prd.md  pyproject.toml
docs/: research_workflow.md
reflexa/: config.py  memory.py  prompt_loader.py
reflexa/api/: deps.py  main.py  middleware.py
reflexa/api/routers/: artifacts.py  chat.py  eval.py  sessions.py
reflexa/db/: crud.py  engine.py  models.py
reflexa/eval/: export.py  harness.py  judge.py
reflexa/llm/: client.py  cost.py  mock.py
reflexa/pipeline/: baseline.py  corrected.py  opener.py  orchestrator.py
reflexa/prompts/baseline/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
reflexa/prompts/eval_judge/: v1.yaml  v2.yaml
reflexa/prompts/pipeline_critic/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
reflexa/prompts/pipeline_draft/: v1.yaml
reflexa/prompts/pipeline_reviser/: v1.yaml  v2.yaml  v3.yaml  v4.yaml  v5.yaml  v6.yaml
reflexa/prompts/pipeline_verifier/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
reflexa/prompts/session_opener/: v1.yaml  v2.yaml
reflexa/schemas/: api.py  eval.py  feedback.py  opener.py  pipeline.py
scripts/: analyze_results.py  export_all.py  export_results.py  init_db.py  run_eval.py  simulate_sessions.py  start_tunnel.sh
tests/: conftest.py  test_api.py  test_db_schema.py  test_eval_harness.py  test_hardening.py  test_llm_client.py  test_pipeline.py  test_prompt_loader.py  test_session_opener.py
ui/: app.py
